[metadata]
name = django-cardano
version = 0.0.9
description = A Django app to interface with the Cardano blockchain.
long_description = file: README.md
author = Allan Hart
author_email = allan.w.hart@gmail.com
license = BSD-3-Clause  # Example license
classifiers =
  Environment :: Web Environment
  Framework :: Django
  Framework :: Django :: 3.1
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Internet :: WWW/HTTP
  Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
  Django >= 3.1
